[Beverage] Minor fix of GalleryContent useLoader hook and first try of new CSS content-visibility

--- a/components/LandingPage/LandingPage.module.css
+++ b/components/LandingPage/LandingPage.module.css
@@ -14,6 +14,8 @@
   justify-content: center;
   padding-top: 2rem;
   position: relative;
+  content-visibility: auto;
+  contain-intrinsic-size: 0 35rem;
 }
 
 .list a {
@@ -41,6 +43,10 @@
 @media (min-width: 1600px) {
   .list {
     grid-template-columns: repeat(auto-fill, 220px);
+  }
+
+  .list li {
+    contain-intrinsic-size: 0 45rem;
   }
 
   .brokenContainer {
